# Hump

./: .gitignore
dotnet/HumpSharp/: HumpSharp.cs
dotnet/WrapperBindings/: Native.cs  WrapperBindings.csproj
native/: CMakeLists.txt  README.md  vcpkg.json
native/src/: hump.cpp  hump.h
